[gd_scene load_steps=15 format=3 uid="uid://ciwgqhupjyf73"]

[ext_resource type="PackedScene" uid="uid://dkpis7w2h85hp" path="res://Characters/Enemies/Enemy.tscn" id="1_w254w"]
[ext_resource type="Texture2D" uid="uid://dflxhw20b7xaw" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/enemies/tribals/tribal_03.png" id="2_866yt"]
[ext_resource type="Script" path="res://Characters/Enemies/BombTribal/BombTribal.gd" id="2_knqtw"]
[ext_resource type="Script" path="res://Characters/HurtBox.gd" id="3_3e340"]
[ext_resource type="Script" path="res://Characters/Enemies/BombTribal/BombTribalFSM.gd" id="3_fqgm1"]
[ext_resource type="Script" path="res://Components/DropMaskOnDeadComponent.gd" id="5_vh0bb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_07vmc"]
radius = 3.16228

[sub_resource type="Animation" id="Animation_myd05"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_83sqt"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_dy6xg"]
resource_name = "idle_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_qy66b"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_topv7"]
resource_name = "move_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5kcwu"]
_data = {
"RESET": SubResource("Animation_myd05"),
"idle": SubResource("Animation_83sqt"),
"idle_up": SubResource("Animation_dy6xg"),
"move": SubResource("Animation_qy66b"),
"move_up": SubResource("Animation_topv7")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jopp4"]
radius = 5.0
height = 12.0

[node name="BombTribal" instance=ExtResource("1_w254w")]
collision_mask = 23
script = ExtResource("2_knqtw")
projectile_speed = 150
mass = 50.0
max_speed = 80

[node name="FiniteStateMachine" parent="." index="0"]
script = ExtResource("3_fqgm1")

[node name="Sprite2D" parent="." index="2"]
position = Vector2(0, -5)
texture = ExtResource("2_866yt")
hframes = 6
vframes = 4

[node name="CollisionShape2D" parent="." index="3"]
shape = SubResource("CircleShape2D_07vmc")

[node name="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_5kcwu")
}

[node name="DropMaskOnDeadComponent" type="Node" parent="." index="6"]
script = ExtResource("5_vh0bb")

[node name="HurtBox" type="Area2D" parent="." index="10"]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_3e340")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_jopp4")

[node name="AimRayCast" type="RayCast2D" parent="." index="11"]

[node name="AttackTimer" type="Timer" parent="." index="12"]
wait_time = 1.5
one_shot = true
